
message SayHelloRequest {

}

message SayHelloResponse {

}

service Greeter {
    rpc SayHello (SayHelloRequest) returns (SayHelloResponse) {}
}
